# Meta-repo-architecture

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Jenkinsfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TODO.md  azure-pipelines.yml  build.mk  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/wiki/: API-Reference.md  Architecture.md  Home.md  Integration-Guide.md  Kubernetes-Deployment.md  Performance-Analysis.md  Vortex-Shield.md  _Footer.md  _Sidebar.md
.github/workflows/: ci.yml  release.yml
air-swarm-os/: CMakeLists.txt  README.md
air-swarm-os/src/: air_swarm_os.cpp  air_swarm_os.h  air_swarm_os_core.cpp  main.cpp
air-to-air-mesh/: ABSOLUTE_END_UPDATE.md  ABSOLUTE_UPDATE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEVELOPMENT_UPDATE.md  FINAL_STATE_UPDATE.md  FINAL_ULTIMATE_UPDATE.md  NEXT_GENERATION_UPDATE.md  README.md  REVOLUTIONARY_AVIATION_SUMMARY.md  TRANSCENDENT_UPDATE.md  ULTIMATE_COMPLETION_UPDATE.md  ULTIMATE_UPDATE.md  build.bat  build.sh  build_all.bat  build_all.sh
air-to-air-mesh/docs/: advanced_mesh_features.md  advanced_mesh_network.md  air_swarm_os_architecture.md  coldjet_control_core.md  development_summary.md  implementation_roadmap.md  local_gravity_field_navigation.md  neuro_fcc_design.md  predictive_airflow_engine.md  roadmap.md  self_adaptive_rotor_blades.md  self_healing_avionics_bios.md  starnav_core_system.md  vortex_shield_system.md
air-to-air-mesh/src/: absolute_reality_system.h  advanced_mesh_demo.cpp  advanced_mesh_features.cpp  advanced_mesh_features.h  ai_optimization_engine.h  airmesh_protocol.h  anti_gravity_field_generator.h  consciousness_collective_network.h  consciousness_upload_system.h  dark_matter_drive_system.h  dimensional_navigation_system.h  distributed_autopilot.cpp  existence_engine_controller.h  hypersonic_flight_control.h  integrated_aviation_system.cpp  integrated_aviation_system.h  main.cpp  mesh_network_node.cpp  metamaterial_aerodynamics.h  multiverse_navigation_system.h  neural_interface_pilot_aircraft.h  omniscient_knowledge_system.h  plasma_propulsion_core.h  quantum_navigation_system.h  quantum_security.h  quantum_teleporter_aircraft.h  reality_matrix_interface.h  revolutionary_aviation.cpp  revolutionary_aviation.h  time_dilation_flight_optimization.h  universal_creation_engine.h  wormhole_travel_controller.h  zero_point_energy_harvester.h
air-to-air-mesh/src/adaptive_rotor/: adaptive_rotor.cpp  adaptive_rotor.h
air-to-air-mesh/src/air_swarm/: air_swarm_os.cpp  air_swarm_os.h
air-to-air-mesh/src/airflow/: predictive_airflow.cpp  predictive_airflow.h
air-to-air-mesh/src/coldjet/: coldjet_control.cpp  coldjet_control.h
air-to-air-mesh/src/core/: advanced_mesh_features.cpp  airmesh_core.cpp  airmesh_core.h
air-to-air-mesh/src/demo/: absolute_demo.cpp  absolute_end_demo.cpp  air_swarm_demo.cpp  final_state_demo.cpp  final_ultimate_demo.cpp  integrated_system_demo.cpp  next_gen_demo.cpp  revolutionary_demo.cpp  self_healing_demo.cpp  starnav_demo.cpp  transcendent_demo.cpp  ultimate_completion_demo.cpp  ultimate_demo.cpp  vortex_shield_demo.cpp
air-to-air-mesh/src/gravity_nav/: gravity_navigation.cpp  gravity_navigation.h
air-to-air-mesh/src/neuro_fcc/: neuro_fcc.cpp  neuro_fcc.h
air-to-air-mesh/src/self_healing/: self_healing_bios.cpp  self_healing_bios.h
air-to-air-mesh/src/starnav/: constellation_recognizer.cpp  motion_compensator.cpp  position_calculator.cpp  star_camera.cpp  starnav_core.cpp  starnav_core.h
air-to-air-mesh/src/vortex_shield/: vortex_shield.cpp  vortex_shield.h
air-to-air-mesh/test/: build_test.sh  compile_test.cpp
air-to-air-mesh/tests/: test_revolutionary_aviation.cpp
azure/: README.md  main.tf  outputs.tf  variables.tf
cold-jet/: CMakeLists.txt  README.md
cold-jet/src/: cold_jet_controller.cpp  cold_jet_core.cpp  cold_jet_core.h  main.cpp
docs/: api-reference.md  architecture.md  integration-guide.md  performance-analysis.md
k8s/: README.md  configmap.yaml  deployments.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secrets.yaml  services.yaml
local-gravity-field-navigation/: CMakeLists.txt  README.md
local-gravity-field-navigation/src/: lgfn_core.cpp  lgfn_core.h  lgfn_navigation.cpp  main.cpp
neuro-fcc/: CMakeLists.txt  README.md
neuro-fcc/src/: failure_recovery.cpp  main.cpp  neuro_fcc_core.cpp  neuro_fcc_core.h
predictive-airflow-engine/: CMakeLists.txt
predictive-airflow-engine/src/: main.cpp  predictive_airflow_core.cpp  predictive_airflow_core.h  predictive_airflow_engine.cpp
scripts/: analyze_performance.py  deploy-production.sh  deploy-staging.sh  generate-docs.sh  run_benchmarks.py  run_integration_tests.py  setup-dev.bat  setup-dev.sh
self-adaptive-rotor-blades/: CMakeLists.txt  README.md
self-adaptive-rotor-blades/src/: adaptive_rotor_system.cpp  adaptive_rotor_system.h  adaptive_rotor_system_impl.cpp  main.cpp
self-healing-avionics-bios/: CMakeLists.txt  README.md
self-healing-avionics-bios/src/: main.c  self_healing_bios.c  self_healing_bios.h
star-nav-core/: CMakeLists.txt  README.md
star-nav-core/src/: main.cpp  star_nav_core.cpp  star_nav_core.h
terraform/: main.tf  outputs.tf  variables.tf
vortex-shield/: CMakeLists.txt  README.md
vortex-shield/src/: main.cpp  vortex_shield_core.cpp  vortex_shield_core.h  vortex_shield_system.cpp
